pod-test.yaml
---
apiVersion: v1
kind: Pod
metadata:
  name: nginx-hello
  namespace: nullplatform
  labels:
    app: nginx-hello
spec:
  containers:
    - name: nginx
      image: nginx:alpine
      ports:
        - containerPort: 80
          name: http
      volumeMounts:
        - name: html-content
          mountPath: /usr/share/nginx/html

        - name: html-content
          mountPath: /etc/nginx/conf.d/default.conf
          subPath: default.conf
  volumes:
    - name: html-content
      configMap:
        name: nginx-hello-config
        items:
          - key: index.html
            path: index.html
          - key: smoke-index.html
            path: smoke/index.html
          - key: default.conf
            path: default.conf

---
# Service para exponer el Pod
apiVersion: v1
kind: Service
metadata:
  name: nginx-hello-service
  namespace: nullplatform
spec:
  selector:
    app: nginx-hello
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
      name: http
  type: ClusterIP

---
# HTTPRoute para conectar con el Gateway
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: nginx-hello-route
  namespace: nullplatform
spec:
  parentRefs:
    - name: gateway-public
      namespace: gateway
  hostnames:
    - "hello.implementations-pae-infra.nullapps.io"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: nginx-hello-service
          port: 80
